added client references, images pending

--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="inner-sec py-md-5 py-3">
         <!-- <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3> -->
         <div class="owl-carousel owl-theme">
+          <!-- Heineken -->
           <div class="item">
             <div class="feedback-info text-left">
               <div class="feedback-top">
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt
-                  ut labore.</p>
+                <p>Las ventas de equipos Apple al personal de la Cervecería Cuauhtémoc a través de Genesys Informática
+                  han sido un éxito a través de su programa BEFLEX</p>
               </div>
               <div class="feedback-grids">
 
                 <div class="feedback-img-info">
-                  <h5>Roger Barrett</h5>
-                  <p>Manager, Chicago </p>
+                  <h5>Agustin de la Vega Herrera</h5>
+                  <p>Gerente del Programa BEFLEX, Heiniken</p>
                 </div>
                 <div class="feedback-img">
                   <img src="images/ts1.jpg" class="img-fluid rounded-circle" alt="" />
@@ -201,19 +201,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
           </div>
+          <!-- Cuprum -->
           <div class="item">
             <div class="feedback-info text-left">
 
               <div class="feedback-top">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt
-                  ut labore.</p>
+                <p>Solo para agradecerles por su profesionalismo y compromiso con este cambio, nos da gusto contar con
+                  ustedes como socios para dar este servicio. <br><br>
+                  <i>
+                    Sobre migracion a nuevos servidores Power
+                  </i>
+
+                </p>
               </div>
               <div class="feedback-grids">
 
                 <div class="feedback-img-info">
-                  <h5>Roger Barrett</h5>
-                  <p>Manager, Chicago </p>
+                  <h5>Fernando Enriquez</h5>
+                  <p>CIO, Cuprum</p>
                 </div>
                 <div class="feedback-img">
                   <img src="images/ts3.jpg" class="img-fluid rounded-circle" alt="" />
@@ -222,38 +228,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
           </div>
-          <div class="item">
-            <div class="feedback-info text-left">
-              <div class="feedback-top">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt
-                  ut labore.</p>
-              </div>
-              <div class="feedback-grids">
-
-                <div class="feedback-img-info">
-                  <h5>Roger Barrett</h5>
-                  <p>Manager, Chicago </p>
-                </div>
-                <div class="feedback-img">
-                  <img src="images/ts2.jpg" class="img-fluid rounded-circle" alt="" />
-                </div>
-                <div class="clearfix"> </div>
-              </div>
-            </div>
-          </div>
+          <!-- Farmacias del Ahorro -->
           <div class="item">
             <div class="feedback-info text-left">
 
               <div class="feedback-top">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt
-                  ut labore.</p>
+                <p>La distribución de más de 1500 tabletas en 54 plazas a través de todo México por parte de Genesys
+                  Informática fue clave para ejecución exitosa del proyecto.</p>
               </div>
               <div class="feedback-grids">
 
                 <div class="feedback-img-info">
-                  <h5>Roger Barrett</h5>
-                  <p>Manager, Chicago </p>
+                  <h5>Jose Hugo Muñoz Hernandez</h5>
+                  <p>Director de Operaciones, Farmacias del Ahorro</p>
                 </div>
                 <div class="feedback-img">
                   <img src="images/ts3.jpg" class="img-fluid rounded-circle" alt="" />
@@ -262,17 +250,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
           </div>
+          <!-- Embraco -->
           <div class="item">
             <div class="feedback-info text-left">
               <div class="feedback-top">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt
-                  ut labore.</p>
+                <p>Con mucho gusto puedo atestiguar que el servicio que recibimos de parte de Genesys y su equipo de
+                  profesionales ha venido cumpliendo con todas nuestras expectativas y la de nuestros usuarios en la
+                  Empresa desde hace casi 4 años (Febrero 2015 - Diciembre 2018). Durante este tiempo hemos encontrado
+                  soluciones competitivas a la medida de nuestras necesidades obteniendo buenos resultados y altos
+                  niveles de satisfacción de nuestros clientes internos. Gracias a su modelo de servicio y nivel de
+                  compromiso hemos podido enfocar nuestra energía en nuevos objetivos.</p>
               </div>
               <div class="feedback-grids">
 
                 <div class="feedback-img-info">
-                  <h5>Roger Barrett</h5>
-                  <p>Manager, Chicago </p>
+                  <h5>Juan Alcocer Martinez</h5>
+                  <p>IT Services and Operations, Embraco</p>
                 </div>
                 <div class="feedback-img">
                   <img src="images/ts2.jpg" class="img-fluid rounded-circle" alt="" />
@@ -281,6 +274,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
           </div>
+
 
         </div>
       </div>
