servidores e imagen de impresion

--- a/infraestructura.html
+++ b/infraestructura.html
@@ -225,29 +225,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
                 egestas vestibulum tellus.</p> -->
-              <p class="text-white">
+              <p class="text-white mb-2">
                 Como parte de los productos que ofrecemos están:
               </p>
               <ul class="ml-3">
                 <li class="text-white">
-                  Servidores System X y Bladecenter (Soluciones basadas en
-                  ambientes Windows, Linux).
+                  IBM Cognitive Systems (Power, Linux, LinuxOne, AIX, IBMi)
                 </li>
                 <li class="text-white">
-                  Servidores System Power (Soluciones basadas en ambientes AIX,
-                  Linux e iOS).
+                  Plataforma Intel x86: Lenovo DataCenter Solutions, Huawei,
+                  Dell
                 </li>
                 <li class="text-white">
-                  IBM Security Network Intrusion Prevention System, Solución
-                  para protección de la infraestructura de ataques mediante el
-                  módulo análisis de protocolos (PAM) en tiempo real.
+                  Hyperconvergencia: Nutanix en POWER e Intel x86 (Lenovo y
+                  Huawei). VMware vSan en plataforma x86.
+                </li>
+                <li class="text-white">
+                  Virtualizacion y consolidacion: VMware en plataforma x86.
+                  Power VM en IBM Power Systems. KVM en Power y x86. zVM en
+                  LinuxOne.
+                </li>
+                <li class="text-white">
+                  Clusters para Machine Learning, Deep Learning, High
+                  Performance Computing, y Artificial Intelligence con Power AI
+                  Spectrum Computing
                 </li>
               </ul>
-              <p class="text-white mt-2">
-                Soluciones de Virtualización de ambientes operativos, ya sea
-                para computo central, como escritorios virtuales (VMware,
-                Citrix, HyperV, Terminales Thin client)
-              </p>
               <!-- <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a> -->
             </div>
           </div>
