correcciones de ortografia y contenido

--- a/about.html
+++ b/about.html
@@ -99,8 +99,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               alt="business hand shake">
           </div>
           <div class="col-lg-6 about-right">
-            <h5 class="tittle text-uppercase">Mas de 15 años de experiencia</h5>
-            <p class="my-4">Genesys es una empresa con más de 15 años de experiencia en infraestructura y soluciones de
+            <h5 class="tittle text-uppercase">Mas de 18 años de experiencia</h5>
+            <p class="my-4">Genesys es una empresa con más de 18 años de experiencia en infraestructura y soluciones de
               informática.
               Gracias a un amplio conocimiento del mercado, hoy Genesys es uno de los principales Business Partners de
               IBM a nivel nacional.
@@ -121,15 +121,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="row">
           <div class="col-lg-6 about-right">
             <h5 class="tittle text-uppercase">Misión</h5>
-            <p class="my-4 about-paragraph">Generar valor a nuestros clientes mediante la integración de soluciones en
-              Tecnologías de
-              Información que cubran sus necesidades de negocio e incrementen sus ventajas competitivas.
+            <p class="my-4 about-paragraph">
+              Generar valor para las empresas mediante la integracion de soluciones en tecnologias de informacion que
+              cubran sus necesidades de negocio e incrementen sus ventajas competitivas.
             </p>
             <h5 class="tittle text-uppercase">Visión</h5>
-            <p class="my-4 about-paragraph">Para el 2018, Genesys se encontrará posicionado como el mejor integrador de
-              soluciones
-              inteligentes en tecnologías de información. Seremos reconocidos por la calidad de nuestro capital humano
-              y nuestra contribución a través de la innovación para la evolución de los negocios.</p>
+            <p class="my-4 about-paragraph">
+              Somos una empresa Lider en ofrecer soliciones de tecnologia de informacion basadas en la innovacion y la
+              especializacion, fundamentada en valores, que genera beneficios para nuestros clientes, socios, y
+              colaboradores, logrando crecimiento continuo.
+            </p>
           </div>
           <div class="col-lg-6 about-img">
             <img class="img-fluid about-img-rad" src="https://lh3.googleusercontent.com/uPFf9W7Mz1mSDYUf1A_2YFX3nz8K7kRLBnW70FF_jF1KmFJm9kqhc8PFaGINZ7uzNqwpm88BXz4Pg-T5wUXx4A0kB_BR0iRUZ-JXwEyc7wYLTBhQYqICl34kMQjSYJc8JEEzkBGgUGg=w2400"
