--- a/vmware.html
+++ b/vmware.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!-- <h4 class="mb-2">SAI</h4> -->
               <h3>Enterprise Solution Provider</h3>
               <p class="mt-2">
-                VMware es la plataforma de virtualización líder del sector para construir infraestructuras de cloud.
+                VMware es la plataforma de virtualización líder del mercado para construir infraestructuras de cloud.
                 Permite a los usuarios ejecutar aplicaciones críticas para el negocio con confianza y responder con
                 mayor rapidez a las necesidades empresariales.
               </p>
