--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -28,6 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <!-- <link href="css/contact.css" rel='stylesheet' type='text/css' /> -->
   <link rel="stylesheet" href="css/instalaciones.css">
+  <link rel="stylesheet" href="css/comunicaciones.css">
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
