cambios a seccion pide tu demo

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row inner_w3l_agile_grids-1 ">
         <div class="col-lg-7 w3layouts_choose_left_grid1">
           <div class="choose_top">
-            <h3 class="w3l_header text-white">Tienes alguna pregunta?</h3>
+            <h3 class="w3l_header text-white">¡Te invitamos a conocer mas de nuestras soluciones!</h3>
             <!--
                 <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4>
               -->
@@ -425,13 +425,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 egestas vestibulum tellus.</p>
               -->
             <p class="text-white">
-              Conoce toda la variedad de productos y servicios tecnologicos
-              que ofrecemos. Nulla pellentesque mi non laoreet eleifend.
-              Integer porttitor mollisar lorem, at molestie arcu pulvinar ut.
-              Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
-              egestas vestibulum tellus.
+              Agenda una cita para realizar una demostración y presentación de la funcionalidad y versatilidad de el
+              amplio abanico de soluciones que manejamos.
             </p>
-            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+            <a href="#footer" class="scroll btn btn-primary mt-3">Contactanos</a>
           </div>
         </div>
       </div>
