fotos de referencias de clientes

--- a/index.html
+++ b/index.html
@@ -270,6 +270,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
           -->
           <div class="owl-carousel owl-theme">
+            <!-- Embraco -->
+            <div class="item">
+              <div class="feedback-info text-left">
+                <div class="feedback-top">
+                  <p>
+                    Con mucho gusto puedo atestiguar que el servicio que
+                    recibimos de parte de Genesys y su equipo de profesionales
+                    ha venido cumpliendo con todas nuestras expectativas y la de
+                    nuestros usuarios en la Empresa desde hace casi 4 años
+                    (Febrero 2015 - Diciembre 2018). Durante este tiempo hemos
+                    encontrado soluciones competitivas a la medida de nuestras
+                    necesidades obteniendo buenos resultados y altos niveles de
+                    satisfacción de nuestros clientes internos. Gracias a su
+                    modelo de servicio y nivel de compromiso hemos podido
+                    enfocar nuestra energía en nuevos objetivos.
+                  </p>
+                </div>
+                <div class="feedback-grids">
+                  <div class="feedback-img-info">
+                    <h5>Juan Alcocer Martinez</h5>
+                    <p>IT Services and Operations, Embraco</p>
+                  </div>
+                  <div class="feedback-img">
+                    <img
+                      src="images/juan-alcocer.jpg"
+                      class="img-fluid rounded-circle"
+                      alt=""
+                    />
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+              </div>
+            </div>
             <!-- Heineken -->
             <div class="item">
               <div class="feedback-info text-left">
@@ -287,7 +320,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                   <div class="feedback-img">
                     <img
-                      src="images/ts1.jpg"
+                      src="images/logo-heineken.png"
                       class="img-fluid rounded-circle"
                       alt=""
                     />
@@ -314,7 +347,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                   <div class="feedback-img">
                     <img
-                      src="images/ts3.jpg"
+                      src="https://lh3.googleusercontent.com/zu6Ph6CV-aqBER0FuY4eX52h56Xz37xu1taEQX9vvSYWk9xqLWTS5e335aDdShiEkNyfI9KyZlLS5O912LH4ZVEg9ZjGtl9O7y9usF5lJMxm3a2xtwt0TRBo5RdxtpaIf7vMqAcWUMc=w2400"
                       class="img-fluid rounded-circle"
                       alt=""
                     />
@@ -340,40 +373,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                   <div class="feedback-img">
                     <img
-                      src="images/ts3.jpg"
-                      class="img-fluid rounded-circle"
-                      alt=""
-                    />
-                  </div>
-                  <div class="clearfix"></div>
-                </div>
-              </div>
-            </div>
-            <!-- Embraco -->
-            <div class="item">
-              <div class="feedback-info text-left">
-                <div class="feedback-top">
-                  <p>
-                    Con mucho gusto puedo atestiguar que el servicio que
-                    recibimos de parte de Genesys y su equipo de profesionales
-                    ha venido cumpliendo con todas nuestras expectativas y la de
-                    nuestros usuarios en la Empresa desde hace casi 4 años
-                    (Febrero 2015 - Diciembre 2018). Durante este tiempo hemos
-                    encontrado soluciones competitivas a la medida de nuestras
-                    necesidades obteniendo buenos resultados y altos niveles de
-                    satisfacción de nuestros clientes internos. Gracias a su
-                    modelo de servicio y nivel de compromiso hemos podido
-                    enfocar nuestra energía en nuevos objetivos.
-                  </p>
-                </div>
-                <div class="feedback-grids">
-                  <div class="feedback-img-info">
-                    <h5>Juan Alcocer Martinez</h5>
-                    <p>IT Services and Operations, Embraco</p>
-                  </div>
-                  <div class="feedback-img">
-                    <img
-                      src="images/ts2.jpg"
+                      src="images/farmacias-logo.png"
                       class="img-fluid rounded-circle"
                       alt=""
                     />
