--- a/index.html
+++ b/index.html
@@ -460,24 +460,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <section class="stat_w3l py-5">
     <div class="container">
       <div class="row py-lg-5 stats-con">
-        <div class="col-sm-3 col-6 stats_info counter_grid">
+        <div class="col-sm-4 col-12 stats_info counter_grid">
           <i class="fas fa-briefcase"></i>
           <p class="counter">18</p>
           <h4>Años de Experiencia</h4>
         </div>
-        <div class="col-sm-3 col-6 stats_info counter_grid1">
+        <div class="col-sm-4 col-12 stats_info counter_grid1">
           <i class="fas fa-users"></i>
-          <p class="counter">48</p>
+          <p class="counter">38</p>
           <h4>Personal Capacitado</h4>
         </div>
-        <div class="col-sm-3 col-6 stats_info counter_grid">
+        <div class="col-sm-4 col-12 stats_info counter_grid2">
           <i class="fas fa-handshake"></i>
-          <p class="counter">2321</p>
-          <h4>Proyectos Exitosos</h4>
-        </div>
-        <div class="col-sm-3 col-6 stats_info counter_grid2">
-          <i class="far fa-smile"></i>
-          <p class="counter">789</p>
+          <div class="d-flex flex-row justify-content-center align-items-center">
+            <p class="counter">500</p>
+            <i class="fas fa-plus ml-3" id="clientes-plus"></i>
+          </div>
           <h4>Clientes</h4>
         </div>
       </div>
