--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Nuestro Compromiso</h3>
+        <!-- <h3 class="tittle text-center mb-md-5 mb-4">Nuestro Compromiso</h3> -->
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
@@ -146,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p>
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info1">
+          <div class="col-lg-6 advantage-grid-info1 d-none d-lg-inline">
             <div class="advantage_left1 text-center">
               <img src="https://lh3.googleusercontent.com/7Da9Nqq2DiNDxFaf1bKMZdm_etIHS5dD5x4_MHr30PoD5yzummWPjXrE8c378MYBEEKJSOUF5i1oNQ8rT8TgoEHzoWXNvu6VGlZGlNTmLCHGqFzEJecVQaEDoA4rIS-SY-x4G4Pex2E=w2400"
                 class="img-fluid" alt="" />
@@ -154,7 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
         </div>
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info1">
+          <div class="col-lg-6 advantage-grid-info1 d-none d-lg-inline">
             <div class="advantage_left1 text-center">
               <img src="https://lh3.googleusercontent.com/bbTburOHq6UDr24vxkubXHZowuMrlmqqOntPtVIyUmUlqTIouGpjCgev2K_vkV9s-jmd_Uevim5iAQoQr-LiNLnvcW1vVS2FJ9pzUpayOlG4ebtK9eA9Iq6f4W1zgXiGxd8YIKY0FTw=w2400"
                 class="img-fluid" alt="" />
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p>
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info1">
+          <div class="col-lg-6 advantage-grid-info1 d-none d-lg-inline">
             <div class="advantage_left1 text-center">
               <img src="https://lh3.googleusercontent.com/4ouNKpoIm7HDXg_eoXglKJTe-_55uZ-ObcLteFCB6ueApzj2f0-u_yMEQzJFXMb4CPVV1vCC4vhqBBnuHWcnUbbkCeQmj3nbmUWUTuvsfNx_YwPk1nbPGxG4YDaiTrK0l9__Klobt9M=w2400"
                 class="img-fluid" alt="" />
@@ -369,7 +369,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               alt="Interfactura" />
             <img class="m-3" src="https://lh3.googleusercontent.com/zu6Ph6CV-aqBER0FuY4eX52h56Xz37xu1taEQX9vvSYWk9xqLWTS5e335aDdShiEkNyfI9KyZlLS5O912LH4ZVEg9ZjGtl9O7y9usF5lJMxm3a2xtwt0TRBo5RdxtpaIf7vMqAcWUMc=w2400"
               alt="Cuprum" />
-            <img class="m-3" src="https://lh3.googleusercontent.com/je2nKsAj-S9TLNujmgqVTlrTneBnI23viib1WzkGoA0r-vTZhw_eNBHEkaN-cEFM2Js0f1rf6RP4E3culFir6cWUlpDnMx_AFANy69bJHDVuIgJqW3bOg_FfGu3Yp_mzTvyuRT1NZFA=w2400"
+            <img class="m-3" src="./images/key-logo.png"
               alt="Key" />
             <img class="m-3" src="https://lh3.googleusercontent.com/xULUCRnZxQfTPXyulyZx8LRD1fcyoDHlsM9IvHpGABG3xIyn8ypmwAxrfuBQ7KO9GwD6pGo2Z2P0s11Fwq9JMgdBCTX3aglqZte5x6PsmwV_SZNffR4PwgwOalWM5UsiJuoz2GLgCY8=w2400"
               alt="Caterpilar" />
