--- a/index.html
+++ b/index.html
@@ -432,6 +432,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               />
               <img
                 class="m-3"
+                src="./images/grupo-imperial.png"
+                alt="Grupo Imperial"
+              />
+              <img class="m-3" src="./images/Femsa-logo.jpg" alt="FEMSA" />
+              <img class="m-3" src="./images/verzatec.jpg" alt="Verzatec" />
+              <img class="m-3" src="./images/Grainger.png" alt="Grainger" />
+              <img
+                class="m-3"
                 src="https://lh3.googleusercontent.com/YEt6Db_VCe6FngMvowVSZt8cIbbaFbA6bHQtNQfFafil-tg8b1-Ke0ZdPQWSZzrlnFMQ9HJt9D-NjIGmXtJduHADrmLn-2lAFDrE6Ig3EgEIPQfwCZ9ZA7Yf05XmGKQK_FCVovfBzZE=w2400"
                 alt="Cerrey"
               />
