margin space for mobile

--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- //services -->
     <!-- choose -->
-    <section class="choose py-5">
+    <section class="choose py-5 px-3">
       <div class="py-md-4 mt-md-3">
-        <div class="row inner_w3l_agile_grids-1 ">
+        <div class="row inner_w3l_agile_grids-1">
           <div class="col-lg-7 w3layouts_choose_left_grid1">
             <div class="choose_top">
               <h3 class="w3l_header text-white">
