--- a/index.html
+++ b/index.html
@@ -571,20 +571,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
               <p>Dr Angel Martinez Villareal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
-              <p class="phone">phone: +1 81 8347 7640</p>
-              <p class="phone my-2">Fax: +0444 555 6789</p>
+              <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
                 E-Mail: <a href="mailto:info@example.com">info@example.com</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Nosotros</h3>
+              <!-- <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Nosotros</h3>
               <p>
                 Curabitur non nulla sit amet nislinit tempus convallis quis ac
                 lectus. lac inia eget consectetur sed, convallis at tellus.
                 Nulla porttitor accumsana tincidunt. Vestibulum ante ipsum
                 primis tempus convallis.
-              </p>
+              </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
               <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
