--- a/index.html
+++ b/index.html
@@ -567,6 +567,58 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </section>
     <!-- //stats -->
+    <!-- / socios comerciales -->
+
+    <hr />
+
+    <section class="banner-bottom py-lg-5 py-md-5" id="socios">
+      <div class="container">
+        <div class="inner-sec py-lg-3 py-3">
+          <h3 class="tittle text-center mb-md-5 pb-1">Socios Comerciales</h3>
+          <!-- flex logos de socios comerciales -->
+          <div class="client-logo m-2 pt-lg-3">
+            <div
+              class="socios-sm d-flex align-items-center flex-wrap justify-content-center"
+            >
+              <img class="m-3" src="./images/IBM-Logo.jpg" alt="IBM" />
+              <img class="m-3" src="./images/lenovo-logo.png" alt="Lenovo" />
+              <img class="m-3" src="./images/dell-logo.jpg" alt="Dell" />
+              <img class="m-3" src="./images/huawei-logo.jpg" alt="Huawei" />
+              <img class="m-3" src="./images/vmware-logo.png" alt="VMware" />
+              <img class="m-3" src="./images/Nutanix-Logo.png" alt="Nutanix" />
+              <img class="m-3" src="./images/apple-logo.png" alt="Apple" />
+              <img class="m-3" src="./images/skye-logo.png" alt="Skye Group" />
+              <img
+                class="m-3"
+                src="./images/c3ntro-logo.jpg"
+                alt="C3ntro Telecom"
+              />
+              <img
+                class="m-3"
+                src="./images/thebluepeople-logo.png"
+                alt="The Blue People"
+              />
+              <img class="m-3" src="./images/Sophos-logo.png" alt="Sophos" />
+              <img class="m-3" src="./images/Lexmark-Logo.jpg" alt="Lexmark" />
+              <img class="m-3" src="./images/cisco-logo.png" alt="Cisco" />
+              <img class="m-3" src="./images/veeam-logo.png" alt="Veeam" />
+              <img class="m-3" src="./images/redhat-logo.png" alt="Red Hat" />
+              <img
+                class="m-3"
+                src="./images/aws-logo.png"
+                alt="Amazon Web Services"
+              />
+              <img
+                class="m-3"
+                src="./images/azure-logo.png"
+                alt="Microsoft Azure"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- // socios comerciales -->
     <!-- /newsletter -->
     <footer class="newsletter_right pymd-5 py-4" id="footer">
       <div class="container">
