storage section updated

--- a/index.html
+++ b/index.html
@@ -630,7 +630,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
@@ -653,7 +654,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </form>
               -->
               <form
-                action="https://formspree.io/alex.gtz17@gmail.com"
+                action="https://formspree.io/ventas@gnsys.com.mx"
                 method="POST"
               >
                 <div class="form-group d-flex">
@@ -767,28 +768,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       });
     </script>
     <!-- //dropdown nav -->
-
-    <!-- password-script -->
-    <!--
-      <script>
-          window.onload = function () {
-              document.getElementById("password1 ").onchange = validatePassword;
-              document.getElementById("password2 ").onchange = validatePassword;
-          }
-
-          function validatePassword() {
-              var pass2 = document.getElementById("password2 ").value;
-              var pass1 = document.getElementById("password1 ").value;
-              if (pass1 != pass2)
-                  document.getElementById("password2 ").setCustomValidity("Passwords Don 't Match");
-              else
-                  document.getElementById("password2").setCustomValidity(' ');
-              //empty string means no validation error
-          }
-
-      </script>
-    -->
-    <!-- //password-script -->
 
     <!-- / start-smoth-scrolling -->
     <script src="js/move-top.js"></script>
