--- a/infraestructura.html
+++ b/infraestructura.html
@@ -282,71 +282,124 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- //Servidores-->
 
-    <!-- /Storage-->
-    <section class="banner-bottom py-lg-5 py-md-5 py-3">
-      <div class="container">
-        <div class="inner-sec py-lg-5 py-3">
-          <div class="row middle-grids">
-            <div class="col-lg-3 advantage-grid-info1 d-flex">
-              <div class="text-center align-self-center">
-                <img
-                  src="./images/puredata.jpg"
-                  class="img-fluid lenovo-bp"
-                  alt="IBM Pure Data"
-                />
-              </div>
-            </div>
+    <hr />
 
-            <div class="col-lg-6 advantage-grid-info pt-md-3 mt-3">
-              <div class="advantage_left">
-                <!-- <h4 class="mb-2">SAI</h4> -->
-                <h3>Storage</h3>
-                <hr />
-                <h4>Soluciones de Almacenamiento:</h4>
-                <!-- <p class="mt-2">
-                Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
-                las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
-                soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
-                virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
-              </p> -->
-                <ul class="ml-3 my-3 infr-list">
-                  <li>
-                    Disco: Soluciones tipo NAS o SAN, Virtualización de
-                    Alamcenamiento
-                  </li>
-                  <li>
-                    Soluciones para Recuperación de Información: Cintas LTO,
-                    Librerías LTO y Librerias Virtuales (VTL)
-                  </li>
-                </ul>
-                <h4>Servidores Integrados IBM Pure:</h4>
-                <ul class="ml-3 my-3 infr-list">
-                  <li>
-                    Soluciones integradas de HW, SW y Middleware (Pure Flex,
-                    Pure Application y Pure Data)
-                  </li>
-                </ul>
-              </div>
+    <!-- /Storage2-->
+    <section class="py-lg-5 py-md-5 py-3">
+      <div class="container">
+        <div class="row middle-grids">
+          <div class="col-lg-7 d-flex">
+            <div class="text-center align-self-center">
+              <img
+                src="./images/ibm-flash-family.jpg"
+                class="img-fluid lenovo-bp"
+                alt="IBM Flash Storage Family"
+              />
             </div>
-            <div class="col-lg-3 advantage-grid-info1 d-flex">
-              <div class="text-center align-self-center">
-                <img
-                  src="./images/pureflex-scaled.jpg"
-                  class="img-fluid ibm-bp"
-                  alt="IBM Pure Flex"
-                />
-              </div>
+          </div>
+
+          <div class="col-lg-5 advantage-grid-info pt-md-3 mt-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Almacenamiento</h3>
+              <hr />
+              <h4>All Flash e Hibridas</h4>
+              <!-- <p class="mt-2">
+                      Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
+                      las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
+                      soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
+                      virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
+                    </p> -->
+              <ul class="ml-3 my-3 infr-list">
+                <li>
+                  IBM Flash Storage Family.
+                  <a
+                    href="https://www.ibm.com/it-infrastructure/storage/flash"
+                    target="_blank"
+                    >Leer mas...</a
+                  >
+                </li>
+                <li>
+                  IBM Storwize.
+                  <a
+                    href="https://www.ibm.com/it-infrastructure/storage/storwize"
+                    target="_blank"
+                    >Leer mas...</a
+                  >
+                </li>
+                <li>
+                  Lenovo THINKSYSTEM Series.
+                  <a
+                    href="https://www.lenovo.com/us/en/data-center/storage/c/storage"
+                    target="_blank"
+                    >Leer mas...</a
+                  >
+                </li>
+              </ul>
+              <h4>Soluciones para respaldos - cintas</h4>
+              <ul class="ml-3 my-3 infr-list">
+                <li>
+                  IBM Tape Storage.
+                  <a
+                    href="https://www.lenovo.com/us/en/data-center/storage/c/storage"
+                    target="_blank"
+                    >Leer mas...</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- software defined storage -->
+        <div class="row middle-grids mt-lg-3">
+          <div class="col-lg-5 advantage-grid-info pt-md-3 mt-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Software-defined Storage</h3>
+              <hr />
+              <h4>IBM Spectrum Family</h4>
+              <!-- <p class="mt-2">
+                        Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
+                        las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
+                        soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
+                        virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
+                      </p> -->
+              <ul class="ml-3 my-3 infr-list">
+                <li>IBM Spectrum Storage Suite</li>
+                <li>IBM Cloud Object Storage</li>
+                <li>IBM Spectrum Scale</li>
+                <li>IBM Spectrum Virtualize</li>
+                <li>IBM Spectrum Archive</li>
+                <li>IBM Spectrum Discover</li>
+                <li>IBM Spectrum NAS</li>
+                <li>
+                  <a
+                    href="https://www.ibm.com/it-infrastructure/storage/software-defined-storage"
+                    target="_blank"
+                    >Y más...</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-7 d-flex">
+            <div class="text-center align-self-center">
+              <img
+                src="./images/ibm-sds.png"
+                class="img-fluid lenovo-bp"
+                alt="IBM Storage Defined Storage"
+              />
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- //Storage-->
+    <!-- //Storage2-->
 
     <hr />
 
     <!-- /Personal Computing -->
-    <section class="banner-bottom py-lg-5 py-md-5 py-3">
+    <section class="banner-bottom py-lg-5 py-md-5 py-3 mb-lg-5">
       <div class="container">
         <div class="inner-sec">
           <div class="row middle-grids">
