--- a/infraestructura.html
+++ b/infraestructura.html
@@ -147,7 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="inner-sec py-lg-5 py-3">
           <div class="row middle-grids">
             <div
-              class="col-lg-3 advantage-grid-info1 d-flex flex-column justify-content-around"
+              class="col-lg-3 advantage-grid-info1 d-flex justify-content-around column-to-row"
             >
               <div class="text-center align-self-center">
                 <img
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- <h4 class="mb-2">SAI</h4> -->
                 <h3>Infraestructura</h3>
                 <hr />
-                <p class="mt-2">
+                <p class="mt-2 infr-text">
                   Basados en las tecnologias de punta del mercado que nos
                   permiten ofrecer soluciones enfocadas a contribuir con la
                   optimización de las operaciones de nuestros clientes,
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </div>
             </div>
             <div
-              class="col-lg-3 advantage-grid-info1 d-flex flex-column justify-content-around"
+              class="col-lg-3 advantage-grid-info1 d-flex column-to-row justify-content-around"
             >
               <div class="text-center align-self-center">
                 <img
@@ -403,12 +403,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="container">
         <div class="inner-sec">
           <div class="row middle-grids">
-            <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div
+              class="col-lg-3 advantage-grid-info1 d-flex justify-content-center"
+            >
               <div class="text-center align-self-center">
                 <img
                   src="./images/lenovo-laptop.png"
                   class="img-fluid lenovo-bp"
-                  alt="IBM Pure Data"
+                  alt="Lenovo Laptop"
                 />
               </div>
             </div>
@@ -437,12 +439,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </ul> -->
               </div>
             </div>
-            <div class="col-lg-3 advantage-grid-info1 d-flex">
+
+            <div
+              class="col-lg-3 advantage-grid-info1 d-flex justify-content-center"
+            >
               <div class="text-center align-self-center">
                 <img
                   src="./images/apple-laptop.png"
                   class="img-fluid ibm-bp"
-                  alt="IBM Pure Flex"
+                  alt="Apple MacBook Pro"
                 />
               </div>
             </div>
@@ -463,7 +468,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
               <p class="phone">
-                E-Mail: <a href="mailto:info@example.com">info@example.com</a>
+                E-Mail:
+                <a href="mailto:ventas@gnsys.com.mx">ventas@gnsys.com.mx</a>
               </p>
             </div>
             <div class="col-lg-3 col-md-6 social-info text-left">
