--- a/impresion.html
+++ b/impresion.html
@@ -363,13 +363,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   -->
     <hr />
 
-    <section class="banner-bottom py-lg-5 py-md-5 py-3" id="logos">
+    <section class="banner-bottom py-lg-5 py-md-5 py-3" id="clientes-impresion">
       <div class="container">
         <div class="inner-sec py-lg-5 py-3">
           <h3 class="tittle text-center mb-md-5 mb-4">Nuestros Clientes</h3>
           <!-- flex logos de clientes -->
-          <div class="d-flex justify-content-around">
-            <div class="client-logo m-2">
+          <div class="client-logo">
+            <div
+              class="client-logo m-2 d-flex align-items-center flex-wrap justify-content-center"
+            >
               <img class="m-3" src="images/Embraco.png" alt="Embraco" />
               <img class="m-3" src="images/Grainger.png" alt="Grainger" />
               <img class="m-3" src="images/larmex.jpg" alt="Larmex" />
